--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "react-global-signals",
-  "private": true,
+  "author": "Rail Batyrshin",
   "version": "0.0.1",
   "type": "module",
+  "license": "MIT",
   "publishConfig": {
     "access": "public"
   },
-  "repository": "https://github.com/TangoPJ/card-checker-js",
-  "homepage": "https://github.com/TangoPJ/card-checker-js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TangoPJ/react-global-state.git"
+  },
+  "homepage": "https://github.com/TangoPJ/react-global-state.git",
   "files": [
     "dist"
   ],
@@ -22,9 +26,11 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepublish": "rm -rf ./dist && npm run build"
   },
   "devDependencies": {
+    "@types/node": "^22.15.17",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
     "react": "^19.1.0",
