--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,33 @@
 {
   "compilerOptions": {
+    // Language and Environment
     "target": "ES2020",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "skipLibCheck": true,
+    "lib": ["DOM", "DOM.Iterable", "ES2020"],
     "jsx": "react-jsx",
-    "types": ["node"],
 
-    /* Bundler mode */
-    "outDir": "./dist",
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
+    // Modules
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "noUncheckedSideEffectImports": true,
+
+    // Completeness
+    "skipLibCheck": true,
+
+    // Emit
+    "outDir": "dist",
+    "declaration": true,
+
+    // Interop Constraints
+    "forceConsistentCasingInFileNames": true,
     "verbatimModuleSyntax": true,
-    "moduleDetection": "force",
-    "noEmit": true,
+    "esModuleInterop": true,
 
-    "typeRoots": ["./dist/index.d.ts", "node_modules/@types"],
-
-    /* Linting */
+    // Type Checking
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "erasableSyntaxOnly": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noFallthroughCasesInSwitch": true
   },
+  "exclude": ["node_modules", "**/*.spec.ts"],
   "include": ["src"]
 }
