--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,5 +29,5 @@
     "noFallthroughCasesInSwitch": true
   },
   "exclude": ["node_modules", "**/*.spec.ts"],
-  "include": ["src"]
+  "include": ["src/index.ts"]
 }
